--- a/Portfolio.html
+++ b/Portfolio.html
@@ -28,7 +28,7 @@
         </section>
         <!--Section 2 -->
         <section class="about" id="about">
-          <img src="image/me.jpg" alt="My photo">
+          <img src="me.jpg" alt="My photo">
           <div>
             <h2>About me</h2>
             <p style="font-weight: normal; width: 75%;"> I'm Health Informatics Graduated in July 2025 
@@ -55,13 +55,13 @@
             </section>
         <section class="portfolio">
             <div class="project">
-               <img src="image/p2.jpg" alt="Project 1">
+               <img src="p2.jpg" alt="Project 1">
                 <h3>Personal Landing Page</h3>
                 <p>My first responsive portfolio site.</p>
                 <a href="https://browse2me1.github.io/my-portfolio/">View Project</a>
             </div>
              <div class="project">
-                <img src="image/p1.png" alt="Project 2">
+                <img src="p1.png" alt="Project 2">
                 <h3>Personal Landing Page</h3>
                 <p>My first responsive portfolio site.</p>
                 <a href="https://symbaseddis-iden.42web.io/" target="_blank">View Project</a>
