--- a/Portfolio.html
+++ b/Portfolio.html
@@ -82,7 +82,9 @@
             <input type="email" name="email" id="email" required><br><br>
 
             <label for="message">Message:</label><br>
-            <textarea rows="5" name="messeage" id="message" required></textarea><br><br>
+            <textarea rows="5" name="messeage" id="message" required>
+                
+            </textarea><br><br>
 
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_next" value="https://browse2me1.github.io/my-portfolio/thank-you.html">
